# CellConstructor

./: .gitignore  CellConstructor Installation Guide.md  LICENSE.md  MANIFEST.in  README.md  build-linux.sh  build-wheels.sh  fpm.toml.old2  fpm.toml2  meson.build  meson.build.old  meson.build.old10  meson.build.old11  meson.build.old12  meson.build.old3.fpm_f2py_toml  meson.build.old4  meson.build.old5  meson.build.old6  meson.build.old7  meson.build.old9  meson.build.old_100a  meson.build.old_static_test  meson.build.secondorder  meson.build.test_f2pywrappers  meson.build.test_fpm_toml  meson.build.thermal_conductivity  meson.build.thirdorder  meson.build_symph  pyproject.toml  requirements.txt  setup-EB-foss-Python.py  setup-EB-intel-Python.py  setup.py  test.meson.build  test_old3.meson.build  test_old4.meson.build
.github/workflows/: build.yml  pythonapp.yml
CModules/: LinAlg.c  LinAlg.h  wrapper.c  wrapper3.c
FModules/: contract_two_phonon_propagator.f90  eff_charge_interp.f90  eqvect.f90  error_handler.f90  fc_supercell_from_dyn.f90  from_matdyn.f90  get_equivalent_atoms.f90  get_latvec.f90  get_lf.f90  get_q_grid_fast.f90  get_scattering_q_grid.f90  get_translations.f90  interp.f90  q2qstar_out.f90  q_gen.f90  recips.f90  rotate_and_add_dyn.f90  second_order_ASR.f90  second_order_centering.f90  set_asr.f90  set_tau.f90  sgam_ph.f90  smallgq.f90  star_q.f90  symdynph_gq_new.f90  symm_base.f90  symm_matrix.f90  symmetry_high_rank.f90  symvector.f90  third_order_ASR.f90  third_order_centering.f90  third_order_cond.f90  third_order_cond_centering.f90  third_order_dynbubble.f90  third_order_interpol.f90  trntnsc.f90  unwrap_tensors.f90
FModules/.ipynb_checkpoints/: cryst_to_car-checkpoint.f90  eff_charge_interp-checkpoint.f90  fc_supercell_from_dyn-checkpoint.f90  invmat-checkpoint.f90  symm_base-checkpoint.f90  symmetry_high_rank-checkpoint.f90
UserGuide/: apireference.rst  conf.py  developerguide.rst  gettingstarted.rst  index.rst  installation.rst  intro.rst  tutorials.rst
cellconstructor/: AnharmonicForceFields.py  Bands.py  ForceTensor.py  Manipulate.py  Methods.py  Moro_object.py  Phonons.py  SSCHA_phonopy_parser.py  Settings.py  Spectral.py  Structure.py  ThermalConductivity.py  Timer.py  Units.py  __init__.py  calculators.py  symmetries.py
cellconstructor/.ipynb_checkpoints/: Methods-checkpoint.py  Phonons-checkpoint.py  Spectral-checkpoint.py  Units-checkpoint.py  calculators-checkpoint.py  symmetries-checkpoint.py
cellconstructor/SymData/: 64.bcs  convert_sym.py
f2py_wrappers/: README.md  secondorder-f2pywrappers2.f90  secondordermodule.c  symph-f2pywrappers.f  symph-f2pywrappers2.f90  symphmodule.c  thermal_conductivity-f2pywrappers2.f90  thermal_conductivitymodule.c  thirdorder-f2pywrappers2.f90  thirdordermodule.c
scripts/: cellconstructor_test.py  symmetrize_dynmat.py  symmetrize_dynmat.x  view_scf_atoms.py
tests/CorrelatedHarmonicSampling/: dyn1  dyn2  generate_correlated_sampling.py
tests/ImportFromPhonons/: test_asephonons.py
tests/IsolateLayer/: Hydrogen.scf  TestIsolateLayer.py
tests/ReadPhOutput/: dyn_1  dyn_2  dyn_3  phonon.pho  test_add_tensor.py
tests/TestASR/: asr_scha.py
tests/TestASR_1D/: test_asr_1d.py
tests/TestAdjustQStar/: dyn_P.3500  dyn_P.3501  dyn_P.35010  dyn_P.350100  dyn_P.350101  dyn_P.350102  dyn_P.350103  dyn_P.350104  dyn_P.350105  dyn_P.350106  dyn_P.350107  dyn_P.350108  dyn_P.350109  dyn_P.35011  dyn_P.350110  dyn_P.350111  dyn_P.350112  dyn_P.35012  dyn_P.35013  dyn_P.35014  dyn_P.35015  dyn_P.35016  dyn_P.35017  dyn_P.35018  dyn_P.35019  dyn_P.3502  dyn_P.35020  dyn_P.35021  dyn_P.35022  dyn_P.35023  dyn_P.35024  dyn_P.35025  dyn_P.35026  dyn_P.35027  dyn_P.35028  dyn_P.35029  dyn_P.3503  dyn_P.35030  dyn_P.35031  dyn_P.35032  (+74 more)
tests/TestConventionalCell/: conventional_cell.scf  convert_primitive_cell_to_conventional.py  hydrogen.scf  primitive_cell.scf  test_cell_convertion.py
tests/TestDiagonalizeSupercell/: dielectric_calc_tetra.pho  prova1  prova2  prova3  prova4  sscha_converged_tetra_dyn_1  sscha_converged_tetra_dyn_2  sscha_converged_tetra_dyn_3  test_diag_sup.py  test_loto_diag.py
tests/TestDiagonalizeSymmetries/: test_diagsymmetries.py
tests/TestEffChargeInterp/: dyn0  dyn1  dyn10  dyn11  dyn12  dyn13  dyn14  dyn15  dyn16  dyn17  dyn18  dyn19  dyn2  dyn20  dyn21  dyn22  dyn23  dyn24  dyn25  dyn26  dyn27  dyn28  dyn29  dyn3  dyn30  dyn31  dyn32  dyn4  dyn5  dyn6  dyn7  dyn8  dyn9  matdyn.in  matdyn_dyn  q2r.in  test_eff_interpol.py  test_effective_charges_supercell.py  test_nonanal.py
tests/TestFC3_parallel/: converged1  converged2  converged3  converged4  test_load_FC3.py
tests/TestFiniteDisplacementPhonons/: test_au_phonons.py
tests/TestForcePositiveDefined/: test_force_positive_definite.py
tests/TestFourierError/: harmonic_1  harmonic_2  harmonic_3  harmonic_4  harmonic_5  harmonic_6  harmonic_7  harmonic_8  test_fourier.py
tests/TestGenerateSupercell/: test_random_generate.py  test_supercell_structure.py
tests/TestHarmEnergyForce/: PbTe.dyn1  PbTe.dyn2  PbTe.dyn3  PbTe.dyn4  PbTe.dyn5  PbTe.dyn6  PbTe.dyn7  PbTe.dyn8  test_supercell_harm_energy_force.py
tests/TestIRActivity/: test_ir_activity.py
tests/TestImposeSymmetries/: old_dyn  test_eqivalent_atoms.py  test_impose_symmetries.py
tests/TestInterpolateDynmat/: dyn1  dyn2  dyn3  dyn4  dyn_pop3_1  dyn_pop3_2  dyn_pop3_3  dyn_pop3_4  dyn_pop3_5  dyn_pop3_6  dyn_prova1  dynmat0  dynmat2  dynmat4  dynmat6  dynmat8  harm_support1  harm_support2  interpolate_with_grid.py  interpolation.py  matdyn0  matdyn1  matdyn2  matdyn3  matdyn4  matdyn5  matdyn6  test_interp_and_diag.py  test_interpol_tensor_support.py  test_interpolate_with_support.py  test_interpolate_with_tensor.py  test_phonon_band.py  test_tensor2_on_itself.py
tests/TestIrRamanActivity/: dynmat1  test_ir_raman_activity.py
tests/TestLoadSCF/: crystal.scf  load_scf_example.py
tests/TestModeSymmetries/: test_double_symmetrization.py  test_matrix_cryst.py  test_mode_symmetries.py
tests/TestNearNeighbourIdentifier/: get_closest_neighbour.py  ice.scf
(+156 files in other folders)
